crates/vise/tests/ui/metrics/bogus_metric_name.stderr
error[E0080]: evaluation panicked: Metric name `счетчик` is invalid: name contains non-ASCII chars, first at position 0
 --> tests/ui/metrics/bogus_metric_name.rs:6:5
  |
6 |     счетчик: Counter,
  |     ^^^^^^^ evaluation of `_` failed here
